fix: fixing styles so when the task name is too big it doesnt break

--- a/src/components/TaskRow/styles.module.scss
+++ b/src/components/TaskRow/styles.module.scss
@@ -1,6 +1,6 @@
 .taskContainer{
   width: 600px;
-  height: 50px;
+  min-height: 50px;
   background-color: #fff;
   border-radius: 5px;
   margin: 10px;
@@ -13,6 +13,7 @@
   .taskName{
     font-size: 20px;
     font-weight: 500;
+    width: 70%;
 
     &.completed{
       text-decoration: line-through;
